--- a/src/xsl-templates/localization/translations/localization_blueprint_en.xml
+++ b/src/xsl-templates/localization/translations/localization_blueprint_en.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<!-- en localization file for Cosnova invoice document -->
+<!-- en localization file for invoice document -->
 <root>
 	<key name="text_invoiceNumber" xml:space="preserve">Invoice number</key>
 	<key name="text_creditNumber" xml:space="preserve">Credit number</key>
@@ -9,6 +9,8 @@
 	<key name="text_dateOfCreditNote" xml:space="preserve">Date of credit note</key>
 	<key name="text_paymentTerm" xml:space="preserve">Payment term</key>
 	<key name="text_aggregated" xml:space="preserve">Aggregated</key>
+	<key name="text_concerning_orders" xml:space="preserve">Concerning Orders: </key>
+	<key name="text_credit_for" xml:space="preserve">Credit for: </key>
 
 	<key name="text_page" xml:space="preserve">Page</key>
 	<key name="text_of" xml:space="preserve">of</key>
@@ -30,6 +32,12 @@
 	<key name="text_deliveryCharge" xml:space="preserve">Delivery charge incl.</key>
 	<key name="text_totalVAT" xml:space="preserve">TAX incl.</key>
 	<key name="text_totalGross" xml:space="preserve">Total (gross)</key>
+
+	<key name="text_charge_delivery" xml:space="preserve">Delivery charge</key>
+	<key name="text_charge_handling" xml:space="preserve">Handling charge</key>
+	<key name="text_charge_payment" xml:space="preserve">Payment charge</key>
+	<key name="text_charge_cod" xml:space="preserve">COD charge</key>
+	<key name="text_charge_default" xml:space="preserve">Charge</key>
 
 	<key name="text_2_pm" xml:space="preserve">Please remit the total amount stating the invoice number.</key>
 	<key name="text_3_pm" xml:space="preserve">The payment has been received via credit card.\nThe order will be shipped within the next days.</key>
